json file change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kavinphab.github.io/Website_Sentimental",
+  "homepage": "http://kavinphab.github.io/",
   "name": "cutiesentimental",
   "version": "0.1.0",
   "private": true,
